--- a/5xhomework.css
+++ b/5xhomework.css
@@ -1,1 +1,79 @@
-<
+body{
+  /* width: 1200px; */
+  padding-top: 140px;
+  text-align: center;
+}
+
+::selection {
+    background: #fc1b44;
+    color: white;
+    }
+.message{
+  width: 90px;
+  height: 90px;
+  position: fixed;
+  right: 40px;
+  bottom: 40px;
+  /* background-color: gray; */
+}
+.message img{
+  width: 100%;
+  border-radius: 50%;
+  box-shadow: 0px 0px 10px rgba(50, 50, 50, 0.2)
+}
+.header{
+  width: 100%;
+  height: 100px;
+  display: flex;
+  justify-content: space-between;
+  position: fixed;
+  right: 0;
+  top: 0;
+  box-shadow: 0px 0px 20px rgba(50, 50, 50, 0.2);
+}
+.logo{
+  width: 300px;
+  display: flex;
+  margin: 0 0 0 30px;
+  background-color: #fff;
+  font-size: 27px;
+  font-weight: 700;
+  color: black;
+  text-decoration: none;
+  align-items: center;
+}
+.logo:hover{
+  color: #fc1b44;
+}
+.logo img{
+  width: 75px;
+  height: 75px;
+}
+nav{
+  margin: 0 20px 0 0;
+  width: 870px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+nav a{
+  font-size: 27px;
+  font-weight: 400;
+  color: black;
+  text-decoration: none;
+}
+nav a:hover{
+  color: #fc1b44;
+}
+
+
+
+.banner{
+  width: 100%;
+}
+
+.banner img{
+  width: 1200px;
+  vertical-align: bottom;
+  border-radius: 18px;
+}
