--- a/5xhomework.css
+++ b/5xhomework.css
@@ -49,21 +49,37 @@ body{
   width: 75px;
   height: 75px;
 }
-nav{
+.header nav{
   margin: 0 20px 0 0;
   width: 870px;
   display: flex;
-  align-items: center;
   justify-content: space-evenly;
+  /* background-color: cadetblue; */
 }
-nav a{
-  font-size: 27px;
+.header nav a{
+  height: 100%;
+  font-size: 26px;
   font-weight: 400;
-  color: black;
   text-decoration: none;
+  color: black;
+  padding: 0 27px;
+  /* background-color: rgb(204, 175, 175); */
 }
-nav a:hover{
+.header nav p{
+  height: 59px;
+  padding-top: 37px;
+  /* background-color: #fff; */
+}
+.header nav a:hover{
   color: #fc1b44;
+}
+.nav_color{
+  width: 100%;
+  height: 4px;
+  /* background-color: #fc1b44; */
+}
+.nav_color:hover{
+  background-color: #fc1b44;
 }
 .banner{
   width: 100%;
