--- a/5xhomework.css
+++ b/5xhomework.css
@@ -1,7 +1,6 @@
 body{
-  /* width: 1200px; */
-  padding-top: 140px;
-  text-align: center;
+  padding-top: 90px;
+  width: 100%;
 }
 
 ::selection {
@@ -9,11 +8,11 @@ body{
     color: white;
     }
 .message{
-  width: 90px;
-  height: 90px;
+  width: 55px;
+  height: 55px;
   position: fixed;
-  right: 40px;
-  bottom: 40px;
+  right: 25px;
+  bottom: 25px;
   /* background-color: gray; */
 }
 .message img{
@@ -23,7 +22,7 @@ body{
 }
 .header{
   width: 100%;
-  height: 100px;
+  height: 65px;
   display: flex;
   justify-content: space-between;
   position: fixed;
@@ -32,62 +31,65 @@ body{
   box-shadow: 0px 0px 20px rgba(50, 50, 50, 0.2);
 }
 .logo{
-  width: 300px;
+  width: 400px;
   display: flex;
-  margin: 0 0 0 30px;
+  margin: 0 0 0 20px;
   background-color: #fff;
-  font-size: 27px;
+  font-size: 18px;
   font-weight: 700;
   color: black;
   text-decoration: none;
   align-items: center;
+
 }
 .logo:hover{
   color: #fc1b44;
 }
 .logo img{
-  width: 75px;
-  height: 75px;
+  width: 50px;
 }
 .header nav{
   margin: 0 20px 0 0;
-  width: 870px;
+  width: 570px;
   display: flex;
   justify-content: space-evenly;
   /* background-color: cadetblue; */
 }
 .header nav a{
   height: 100%;
-  font-size: 26px;
+  font-size: 17px;
   font-weight: 400;
   text-decoration: none;
   color: black;
-  padding: 0 27px;
+  padding: 0 18px;
   /* background-color: rgb(204, 175, 175); */
 }
 .header nav p{
-  height: 59px;
-  padding-top: 37px;
-  /* background-color: #fff; */
+  height: 40px;
+  padding-top: 22px;
+  background-color: #fff;
 }
 .header nav a:hover{
   color: #fc1b44;
 }
 .nav_color{
   width: 100%;
-  height: 4px;
+  height: 3px;
   /* background-color: #fc1b44; */
 }
 .nav_color:hover{
   background-color: #fc1b44;
 }
 .banner{
+  text-align: center;
   width: 100%;
+  text-align: center;
+
 }
 .banner img{
   width: 1200px;
   vertical-align: bottom;
-  border-radius: 18px;
+  border-radius: 5px;
 }
 
 
