--- a/5xhomework.css
+++ b/5xhomework.css
@@ -22,7 +22,7 @@ body{
 }
 .header{
   width: 100%;
-  height: 65px;
+  /* height: 65px; */
   display: flex;
   justify-content: space-between;
   position: fixed;
@@ -83,8 +83,6 @@ body{
 .banner{
   text-align: center;
   width: 100%;
-  text-align: center;
-
 }
 .banner img{
   width: 1200px;
@@ -92,4 +90,15 @@ body{
   border-radius: 5px;
 }
 
+
+
+
+.footer{
+  text-align: center;
+  background-color: #171E2C;
+  color: #A0A6B1;
+  font-size: 13.5px;
+  font-weight: 600;
+  padding: 19px 0;
+}
 
