--- a/5xhomework.css
+++ b/5xhomework.css
@@ -139,7 +139,7 @@ body{
   width: 770px;
   text-align: left;
   margin: auto;
-  padding: 100px 0 0;
+  padding: 100px 0 40px;
 }
 .teacher_slogan h2{
   font-size: 30px;
@@ -153,24 +153,23 @@ body{
   margin: left;
 }
 .teacher_slogan p{
-  padding: 33px 0;
+  padding-top: 33px;
   font-size: 20px;
   line-height: 28px;
 }
 .teacher_member{
   display: flex;
   flex-wrap: wrap;
-  background-color: rgb(252, 221, 221);
   justify-content: space-evenly;
 }
 .teacher_member_each{
-  width: 510px;
+  width: 500px;
   background-color:white;
   padding: 40px;
+  margin-bottom: 30px;
   border-radius: 5px;
   box-shadow: 0px 0px 10px rgba(70, 69, 69, 0.1)
 }
-
 .member_info{
   display: flex;
   align-items: center;
@@ -197,7 +196,7 @@ body{
 .member_info_name h4{
   font-size: 20px;
   font-weight: 600;
-  padding: 20px 0;
+  padding: 26px 0 16px;
 }
 .member_contact{
   display: flex;
@@ -211,36 +210,48 @@ body{
   opacity: 1;
 }
 .member_line{
-  margin: auto;
-  width: 80%;
-  height: 2px;
+  width: 100%;
+  height: 1.5px;
   background-color: #E5E7EB;
 }
 .member_introduce{
+  padding: 16px 0;
   font-size: 16px;
-  line-height: 22px;
+  font-weight: 400;
+  line-height: 23px;
 }
-
+.member_introduce p{
+  padding-top: 10px;
+}
 .member_line2{
   display: flex;
+  align-items: center;
+  padding: 10px 0 20px;
 }
 .member_line2 p{
   font-size: 16px;
+  font-weight: 400;
+}
+.member_line2 div{
+  width: 80%;
+  height: 1.5px;
+  background-color: #E5E7EB;
 }
 .member_course{
   display: flex;
   flex-wrap:wrap;
-  
 }
 .member_course a{
   font-size: 16px;
   text-decoration: none;
   color: #fc1b44;
+  margin-right: 15px;
   padding: 8px;
   border-width: 1px;
   border-style: solid;
   border-color: #fc1b44;
   border-radius: 5px;
+
 }
 
 .member_course a:hover{
