修改threepoints區域三籃寬度一樣

--- a/5xhomework.css
+++ b/5xhomework.css
@@ -113,10 +113,11 @@ body{
   display: flex;
   justify-content: space-evenly;
   padding: 30px 0 180px;
-}
-.threepoints_block{
   text-align: center;
   color: #394150;
+}
+.threepoints_block{
+  width: 100%;
 }
 .threepoints_block img{
   width: 230px;
