--- a/5xhomework.css
+++ b/5xhomework.css
@@ -12,7 +12,6 @@ body{
   position: fixed;
   right: 25px;
   bottom: 25px;
-  /* background-color: gray; */
 }
 .message img{
   width: 100%;
@@ -21,10 +20,10 @@ body{
 }
 .header{
   width: 100%;
-  /* height: 65px; */
   display: flex;
   justify-content: space-between;
   position: fixed;
+  z-index: 1;
   right: 0;
   top: 0;
   box-shadow: 0px 0px 20px rgba(50, 50, 50, 0.2);
