--- a/course.css
+++ b/course.css
@@ -317,3 +317,11 @@
   position: relative;
   right: -5px;
 }
+.command{
+  width: 100%;
+  color: #394150;
+}
+.article{
+  width: 100%;
+  color: #394150;
+}
