--- a/course.css
+++ b/course.css
@@ -98,8 +98,7 @@
 .course_recently{
   width: 1175px;
   height: 500px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto 50px;
 }
 .course_recently h5{
   font-size: 24px;
@@ -135,6 +134,7 @@
 }
 .recently_each{
   text-decoration: none;
+  
 }
 .recently_each:hover{
   position: relative;
@@ -191,24 +191,6 @@
 .recently_each_last{
   color: #34D399;
 }
-.course_more{
-  width: 100%;
-  height: 120pt;
-  text-align: center;
-  margin-top: 40px;
-  align-items: center;
-}
-.course_more a{
-  font-size: 18px;
-  text-decoration: none;
-  color: white;
-  padding: 12px 32px;
-  background-color: #fc1b44;
-  border-radius: 5px;
-}
-.course_more a:hover{
-  background-color: #b31e39;
-}
 .onlinecourse{
   width: 100%;
   height: 850px;
@@ -233,7 +215,7 @@
 .onlinecourse_intro_color{
   width: 48px;
   height: 2px;
-  background-color: #fc1b44;;
+  background-color: #fc1b44;
   margin: left;
 }
 .onlinecourse_intro p{
@@ -317,10 +299,9 @@
   position: relative;
   right: -5px;
 }
-.command{
-  width: 100%;
-  color: #394150;
-}
+
+
+
 .article{
   width: 100%;
   color: #394150;
