--- a/course.css
+++ b/course.css
@@ -299,6 +299,58 @@
   position: relative;
   right: -5px;
 }
+.recommend{
+  color: #394150;
+}
+.recommand_member{
+  display: flex;
+  width: 900px;
+  margin: -40px auto 150px auto;
+  justify-content: space-evenly;
+  align-items: start;
+}
+.recommand_member_item{
+  width: 345px;
+  border-radius: 5px;
+  padding: 30px;
+  box-shadow: 0px 0px 10px rgba(70, 69, 69, 0.1)
+  
+}
+.recommand_member_p{
+  color: #394150;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 23px;
+}
+.recommand_student{
+  display: flex;
+  align-items: center;
+  margin-top: 30px;
+}
+.recommand_student img{
+  width: 40px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+.recommand_student p{
+  color: #A5ABB5;
+  font-size: 13px;
+  font-weight: 400;
+}
+.recommend_dot{
+  width: 350px;
+  display: flex;
+  margin: 0 auto 30px;
+  justify-content: space-evenly;
+}
+.recommend_dot div{
+  width: 8px;
+  height: 8px;
+  background-color: #D3D6DB;
+}
+.recommend_dot div:hover{
+  background-color: #fc1b44;
+}
 
 
 
