--- a/5xhomework02.css
+++ b/5xhomework02.css
@@ -387,3 +387,72 @@
   font-size: 13px;
   font-weight: 400;
 }
+.link{
+  color: white;
+  background-color: #29303D;
+  margin-top: -50px;
+  padding-bottom: 60px;
+}
+.link_links{
+  display: flex;
+  padding-top: 100px;
+}
+.link_information{
+  width: 600px;
+  margin-left: 100px;
+}
+.link img{
+  height: 55px;
+}
+.link_information p{
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 24px;
+}
+.link_web{
+  display: flex;
+  flex-wrap: wrap;
+  padding-right: 100px;
+}
+.link_web div{
+  width: 200px;
+  height: 180px;
+}
+.link_web h6{
+  font-size: 15px;
+  font-weight: 700;
+  margin-bottom: 15px;
+}
+.link_web a{
+  display: grid;
+  text-decoration: none;
+  color: white;
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 25px;
+}
+.link_web a:hover{
+  color: #fc1b44;
+}
+.link_icons{
+  width: 450px;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  justify-content:space-evenly;
+}
+.link_icons img{
+  width: 38px;
+  height: 38px;
+}
+.link_icons img:hover{
+  opacity: 0.3;
+}
+.footer{
+  text-align: center;
+  background-color: #171E2C;
+  color: #A0A6B1;
+  font-size: 13.5px;
+  font-weight: 500;
+  padding: 19px 0;
+}
