--- a/5xhomework.css
+++ b/5xhomework.css
@@ -55,28 +55,30 @@ body{
   /* background-color: cadetblue; */
 }
 .header nav a{
-  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-decoration: none;
   font-size: 17px;
   font-weight: 400;
-  text-decoration: none;
   color: black;
   padding: 0 18px;
-  /* background-color: rgb(204, 175, 175); */
 }
 .header nav p{
-  height: 39px;
-  padding-top: 24px;
+  padding: 24px 0;
 }
 .header nav a:hover{
   color: #fc1b44;
 }
-.nav_color{
+.nav_line{
   width: 100%;
   height: 3px;
-  /* background-color: #fc1b44; */
-}
-.nav_color:hover{
   background-color: #fc1b44;
+  transform: scaleX(0);
+  transition: transform .5s;
+}
+.header nav a:hover .nav_line{
+  transform: scaleX(1);
 }
 .banner{
   text-align: center;
