--- a/5xhomework.css
+++ b/5xhomework.css
@@ -116,7 +116,7 @@ body{
   width: 1200px;
   display: flex;
   justify-content: space-evenly;
-  padding-bottom:180px;
+  padding-bottom:240px;
   text-align: center;
   color: #394150;
 }
@@ -137,15 +137,25 @@ body{
   line-height: 22px;
 }
 .teacher{
-  width: 100%;
+  /* width: 1200; */
   background-color: #F9FAFB;
   color: #394150;
+  position: relative;
+}
+.teacher::before{
+  content: "";
+  background-color: #F9FAFB;
+  position: absolute;
+  bottom: 100%;
+  width: 100%;
+  height: 170px;
+  clip-path: polygon(0% 100%, 30% 0%, 100% 100%);
 }
 .teacher_introduce{
-  width: 770px;
+  width: 700px;
   text-align: left;
   margin: auto;
-  padding: 100px 0 40px;
+  padding: 30px 0 40px;
 }
 .teacher_introduce h1{
   font-size: 30px;
@@ -276,6 +286,7 @@ body{
 }
 .media{
   width: 100%;
+  height: 900px;
   background-color: #F9FAFB;
   color: #394150;
 }
@@ -306,7 +317,7 @@ body{
 }
 .main_morelink{
   width: 100%;
-  height: 160pt;
+  height: 80pt;
   text-align: center;
   margin-top: 25px;
 }
