--- a/5xhomework02.css
+++ b/5xhomework02.css
@@ -1,7 +1,27 @@
 .course{
   width: 100%;
   background-color: #29303D;
+  position: relative;
 }
+.course::before{
+  content: "";
+  background-color: #29303D;
+  position: absolute;
+  bottom: 99.96%;
+  width: 100%;
+  height: 170px;
+  clip-path: polygon(0% 100%, 30% 0%, 100% 100%);
+}
+.course::after{
+  content: "";
+  background-color: #29303D;
+  position: absolute;
+  top: 99.96%;
+  width: 100%;
+  height: 170px;
+  clip-path: polygon(0% 0%, 100% 0%, 70% 100%);
+}
+
 .course_short{
   width: 1080px;
   display: flex;
@@ -10,7 +30,7 @@
   margin-right: auto;
 }
 .course_introduce{
-  margin: 170px 30px 0px 20px;
+  margin: 90px 30px 0px 20px;
 }
 .course_introduce h1{
   font-size: 30px;
@@ -198,6 +218,16 @@
   margin-right: auto;
   color: #394150;
   background-color: #F9FAFB;
+  position: relative;
+}
+.onlinecourse::after{
+  content: "";
+  background-color: #F9FAFB;
+  position: absolute;
+  top: 99.96%;
+  width: 100%;
+  height: 170px;
+  clip-path: polygon(0% 0%, 100% 0%, 30% 100%);
 }
 .onlinecourse_intro{
   width: 1125px;
@@ -205,7 +235,7 @@
   margin-right: auto;
   text-align: left;
   margin: left;
-  padding: 100px 0 50px;
+  padding: 200px 0 50px;
 }
 .onlinecourse_intro h1{
   font-size: 30px;
@@ -302,6 +332,10 @@
 .recommend{
   color: #394150;
 }
+.recommand_title{
+  padding-top:200px
+}
+
 .recommand_member{
   display: flex;
   width: 900px;
@@ -387,11 +421,24 @@
   font-size: 13px;
   font-weight: 400;
 }
+.article_morelink{
+  padding-bottom: 250px;
+}
 .link{
   color: white;
   background-color: #29303D;
   margin-top: -50px;
   padding-bottom: 60px;
+  position: relative;
+}
+.link::before{
+  content: "";
+  background-color: #29303D;
+  position: absolute;
+  bottom: 99.9%;
+  width: 100%;
+  height: 170px;
+  clip-path: polygon(0% 100%, 30% 0%, 100% 100%);
 }
 .link_links{
   display: flex;
